fixing course title align ment

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -121,7 +121,7 @@
 
 .index-course {
   width: 270px;
-  height: auto;
+  height: 250px;
   margin: 20px 10px;
   padding: 30px 0;
   background-color: $white;
